--- a/package.json
+++ b/package.json
@@ -14,20 +14,24 @@
     "lint-fix": "next lint --fix"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@emotion/cache": "11.10.5",
     "@emotion/react": "11.10.6",
     "@emotion/server": "11.10.0",
     "@emotion/styled": "11.10.6",
     "@heroicons/react": "^2.0.16",
-    "@mui/lab": "5.0.0-alpha.120",
+    "@mui/icons-material": "^5.14.1",
+    "@mui/lab": "^5.0.0-alpha.120",
     "@mui/material": "^5.11.10",
     "@mui/system": "5.11.9",
     "@mui/x-data-grid": "^6.9.2",
     "@mui/x-data-grid-generator": "^6.9.2",
-    "@mui/x-date-pickers": "5.0.19",
+    "@mui/x-date-pickers": "^5.0.20",
     "apexcharts": "3.37.0",
     "date-fns": "2.29.3",
+    "emailjs-com": "^3.2.0",
     "formik": "2.2.9",
+    "material-ui-popup-state": "^5.0.9",
     "next": "13.1.6",
     "nprogress": "0.2.0",
     "prop-types": "15.8.1",
